scrollbar fix

--- a/about.css
+++ b/about.css
@@ -18,6 +18,7 @@ html,
 body {
   overflow-x: hidden;
   width: 100%;
+  box-sizing: border-box;
 }
 body {
   padding: 0;
@@ -41,10 +42,9 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   margin-top: 70px;
-  width: 100vw;
-  height: 95vh;
+  width: 100%;
+  min-height: 95vh; 
   background-attachment: fixed;
-  z-index: -1;
 }
 
 .about--home--title {
@@ -56,14 +56,14 @@ body {
   justify-content: center;
   z-index: 1;
   text-transform: capitalize;
-  font-size: 4.5rem;
+  font-size: 3.5rem;
 }
 
 
 .passage {
   padding: 20px;
   margin-inline: 80px;
-  margin-bottom: 300px;
+  margin-bottom: 50px; 
   background-color: #f7f7f7;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.155);
